# modorganizer-basic_games

./: .gitignore  CMakePresets.json  README.md  basic_game.py  epic_utils.py  gog_utils.py  plugin-requirements.txt  pyproject.toml  steam_utils.py  vcpkg.json
.github/workflows/: build.yml  linters.yml
games/: game_baldursgate3.py  game_blackandwhite2.py  game_bladeandsorcery.py  game_da2.py  game_dao.py  game_darkestdungeon.py  game_dispatch.py  game_finalfantasy7rebirth.py  game_kerbalspaceprogram.py  game_kingdomcomedeliverance.py  game_kingdomcomedeliverance2.py  game_msfs2020.py  game_oblivion_remaster.py  game_silksong.py  game_stardewvalley.py  game_sts2.py  game_subnautica-below-zero.py  game_subnautica.py  game_thebindingofisaacrebirth.py  game_valheim.py  game_witcher1.py  game_witcher2.py  game_x4.py
games/oblivion_remaster/: mod_data_checker.py
games/stalkeranomaly/: XRSave.py
typings/PyQt6/: QAxContainer.pyi  QtBluetooth.pyi  QtCore.pyi  QtDBus.pyi  QtDesigner.pyi  QtGui.pyi  QtHelp.pyi  QtMultimedia.pyi  QtMultimediaWidgets.pyi  QtNetwork.pyi  QtNfc.pyi  QtOpenGL.pyi  QtOpenGLWidgets.pyi  QtPdf.pyi  QtPdfWidgets.pyi  QtPositioning.pyi  QtPrintSupport.pyi  QtQml.pyi  QtQuick.pyi  QtQuick3D.pyi  QtQuickWidgets.pyi  QtRemoteObjects.pyi  QtSensors.pyi  QtSerialPort.pyi  QtSpatialAudio.pyi  QtSql.pyi  QtStateMachine.pyi  QtSvg.pyi  QtSvgWidgets.pyi  QtTest.pyi  QtTextToSpeech.pyi  QtWebChannel.pyi  QtWebSockets.pyi  QtWidgets.pyi  QtXml.pyi
